mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: samia-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:1.0.0   # official image tag may vary; use mongo-express OR use dockerhub version
        ports:
          - containerPort: 8081
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: samia-ns
spec:
  selector:
    app: mongo-express
  ports:
    - port: 80
      targetPort: 8081
  # expose via NodePort so you can access if needed, but Ingress is optional for subdomain
  type: ClusterIP
